// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoColumn No props 1`] = `
<section
  className="emotion-1"
/>
`;

exports[`InfoColumn no button 1`] = `
<section
  className="emotion-6"
>
  <aside
    className="emotion-3"
  >
    <h3
      className="emotion-1"
    >
      Info!
    </h3>
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with button 1`] = `
<section
  className="emotion-6"
>
  <aside
    className="emotion-3"
  >
    <h3
      className="emotion-1"
    >
      Info!
    </h3>
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
      <button>
        Submit
      </button>
    </div>
  </aside>
  <aside
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with info and meta fields 1`] = `
<section
  className="emotion-6"
>
  <aside
    className="emotion-3"
  >
    <h3
      className="emotion-1"
    />
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with infoFields 1`] = `
<section
  className="emotion-4"
>
  <aside
    className="emotion-3"
  >
    <h3
      className="emotion-1"
    />
    <div
      className="emotion-2"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with metaFields 1`] = `
<section
  className="emotion-3"
>
  <aside
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;
